Added subdirs and don't allow additionalProperties

--- a/latest/osdk.manifest.project
+++ b/latest/osdk.manifest.project
@@ -3,6 +3,7 @@
     "$schema": "https://json-schema.org/draft/2020-12/schema",
     "description": "A representation of a component project for OSDK",
     "type": "object",
+    "additionalProperties": false,
     "properties": {
         "id": {
             "description": "The unique identifier for this manifest",
@@ -23,6 +24,7 @@
                 ".*": {
                     "type": "object",
                     "properties": {
+                        "additionalProperties": false,
                         "git": {
                             "description": "The git repository to clone",
                             "type": "string"
