--- a/latest/osdk.manifest.project
+++ b/latest/osdk.manifest.project
@@ -5,6 +5,10 @@
     "type": "object",
     "additionalProperties": false,
     "properties": {
+        "$schema": {
+            "description": "The schema that this manifest conforms to",
+            "type": "string"
+        },
         "id": {
             "description": "The unique identifier for this manifest",
             "type": "string"
