Added cutekit manifests

--- a/latest/cutekit.manifest.project
+++ b/latest/cutekit.manifest.project
@@ -1,7 +1,7 @@
 {
-    "$id": "https://schemas.cute.engineering/stable/osdk.manifest.project.v1",
+    "$id": "https://schemas.cute.engineering/stable/cutekit.manifest.project.v1",
     "$schema": "https://json-schema.org/draft/2020-12/schema",
-    "description": "A representation of a component project for OSDK",
+    "description": "A representation of a component project for CuteKit",
     "type": "object",
     "additionalProperties": false,
     "properties": {
