fix: include the requirement of having a schema in the different manifest.

--- a/latest/cutekit.manifest.project
+++ b/latest/cutekit.manifest.project
@@ -3,6 +3,9 @@
     "$schema": "https://json-schema.org/draft/2020-12/schema",
     "description": "A representation of a component project for CuteKit",
     "type": "object",
+    "required": [
+        "$schema"
+    ],
     "additionalProperties": false,
     "properties": {
         "$schema": {
