--- a/latest/cutekit.manifest.project
+++ b/latest/cutekit.manifest.project
@@ -1,5 +1,5 @@
 {
-    "$id": "https://schemas.cute.engineering/stable/cutekit.manifest.project.v1",
+    "$id": "https://schemas.cute.engineering/stable/cutekit.manifest.project",
     "$schema": "https://json-schema.org/draft/2020-12/schema",
     "description": "A representation of a component project for CuteKit",
     "type": "object",
@@ -10,7 +10,7 @@
     "properties": {
         "$schema": {
             "description": "The schema that this manifest conforms to",
-            "type": "string"
+            "const": "https://schemas.cute.engineering/stable/cutekit.manifest.project"
         },
         "id": {
             "description": "The unique identifier for this manifest",
