--- a/latest/osdk.manifest.project
+++ b/latest/osdk.manifest.project
@@ -1,45 +1,1 @@
-{
-    "$id": "https://schemas.cute.engineering/stable/osdk.manifest.project.v1",
-    "$schema": "https://json-schema.org/draft/2020-12/schema",
-    "description": "A representation of a component project for OSDK",
-    "type": "object",
-    "additionalProperties": false,
-    "properties": {
-        "$schema": {
-            "description": "The schema that this manifest conforms to",
-            "type": "string"
-        },
-        "id": {
-            "description": "The unique identifier for this manifest",
-            "type": "string"
-        },
-        "type": {
-            "description": "The type of this manifest",
-            "type": "string"
-        },
-        "description": {
-            "description": "A description of this manifest",
-            "type": "string"
-        },
-        "extern": {
-            "description": "A list of external dependencies",
-            "type": "object",
-            "patternProperties": {
-                ".*": {
-                    "type": "object",
-                    "properties": {
-                        "additionalProperties": false,
-                        "git": {
-                            "description": "The git repository to clone",
-                            "type": "string"
-                        },
-                        "tag": {
-                            "description": "The tag to checkout",
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
+../stable/osdk.manifest.project.v1
